Correct display of Welcome View on mobile landscape display.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -66,9 +66,26 @@
 ******************************************/
 
 /* Extra Small devices (mobiles, 320px and up) */
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
 
 }
+
+@media (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+
+  .col-xs-12-landscape {
+    width: 33.33333333333333%;
+  }
+
+  .main-page-title{
+    font-size: $main-page-title-mobile - 25px;
+  }
+
+  .main-page-image{
+    height: 332px;
+  }
+}
+
+
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
 
@@ -77,9 +94,7 @@
 @media (min-width: 992px) and (max-width: 1199px) {
 
   .main-page-title{
-
     font-size: $main-page-title-desktop - 15px;
-    color: $main-page-title-font-color;
     line-height: 95%;
   }
 
